Make cglib accessible to private and protected methods in java.base packages