@@ -1,5 +1,5 @@
 <!-- 
- * Copyright (C) 2011-2012 Eiichiro Uchiumi. All Rights Reserved.
+ * Copyright (C) 2011-2022 Eiichiro Uchiumi. All Rights Reserved.
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
@@ -27,7 +27,7 @@
   			<artifactId>maven-javadoc-plugin</artifactId>
   			<version>2.9.1</version>
   			<configuration>
-  				<bottom><![CDATA[Copyright © 2011-2019 <a href="mailto:eiichiro@eiichiro.org">Eiichiro Uchiumi</a>. All Rights Reserved.]]></bottom>
+  				<bottom><![CDATA[Copyright © 2011-2022 <a href="mailto:eiichiro@eiichiro.org">Eiichiro Uchiumi</a>. All Rights Reserved.]]></bottom>
   				<doctitle>${project.name} ${project.version} API Specifications</doctitle>
   			</configuration>
   		</plugin>
@@ -60,6 +60,20 @@
   					</lifecycleMappingMetadata>
   				</configuration>
   			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<argLine>
+					--add-opens java.base/java.lang=ALL-UNNAMED
+					--add-opens java.base/java.util=ALL-UNNAMED
+					--add-opens java.base/java.net=ALL-UNNAMED
+					--add-opens java.base/java.nio.file=ALL-UNNAMED
+					--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+					--add-opens java.base/java.util.stream=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
   		</plugins>
   	</pluginManagement>
   </build>
